# DistrictHeatingSim

./: .gitignore  .readthedocs.yaml  BACKLOG.md  CHANGELOG.md  DistrictHeatingSim.spec  DistrictHeatingSim_Release.spec  LICENSE  MANIFEST.in  PYINSTALLER_BUILD_GUIDE_EN.md  README.md  RELEASE_CHECKLIST.md  Software_Analyse_und_Verbesserungsvorschlaege.md  build.py  build_common.py  build_debug.py  deploy_docs.sh  documentation_requirements.txt  error_log.txt  exported_data.geojson  leaflet_map.html  net_results_not_working_time_step.txt  net_results_working_time_step.txt  pyproject.toml  requirements.txt  run_debug.bat  setup.py  spec_common.py  todo.md  todo.txt
.github/workflows/: ci.yml
currently_not_used/: STES.py  generator_schematic.py  generator_schematic_test_window.py  heat_supply_areas.py  schematic_scene.py  schematic_test_window.py  simple_osm_clustering_test.py  spidernet_diagramm_qpainter.py  test_schematic
currently_not_used/PyQt5_leaflet/: PyQt5_Leafleat.py  geojsonHandler.js  layerControl.js  leaflet_code.html  main.js  map.html
currently_not_used/STES/: STES.py  STES_Integration_test.py  Sprint.txt  chp.py  generators.py  solarthermal.py
docs/: Makefile  STES_Calculation_Logic.md  SimpleThermalStorage_Calculation_Logic.md  StratifiedThermalStorage_Calculation_Logic.md  create_storage_comparison.py  plan_elevation_integration.md  update_rst.py
docs/LaTeX doc/: main_doc.aux  main_doc.fdb_latexmk  main_doc.fls  main_doc.out  main_doc.tex  main_doc.toc
docs/source/: STES_Calculation_Logic.rst  SimpleThermalStorage_Calculation_Logic.rst  StratifiedThermalStorage_Calculation_Logic.rst  conf.py  districtheatingsim.geocoding.rst  districtheatingsim.gui.BuildingTab.rst  districtheatingsim.gui.CalculationTab.rst  districtheatingsim.gui.ComparisonTab.rst  districtheatingsim.gui.EnergySystemTab.rst  districtheatingsim.gui.IndividualTab.rst  districtheatingsim.gui.LOD2Tab.rst  districtheatingsim.gui.LeafletTab.rst  districtheatingsim.gui.MainTab.rst  districtheatingsim.gui.MixDesignTab.rst  districtheatingsim.gui.NetSimulationTab.rst  districtheatingsim.gui.PVTab.rst  districtheatingsim.gui.ProjectTab.rst  districtheatingsim.gui.PyQt5_leaflet.rst  districtheatingsim.gui.RenovationTab.rst  districtheatingsim.gui.VisualizationTab.rst  districtheatingsim.gui.rst  districtheatingsim.heat_generators.rst  districtheatingsim.heat_requirement.rst  districtheatingsim.lod2.rst  districtheatingsim.net_generation.rst  districtheatingsim.net_simulation_pandapipes.rst  districtheatingsim.osm.rst  districtheatingsim.rst  districtheatingsim.utilities.rst  districtheatsim.gui.IndividualTab.rst  districtheatsim.gui.PVTab.rst  energy_systems.rst  examples.rst  gui_framework.rst  index.rst  modules.rst  network_analysis.rst  (+5 more)
examples/: 01_example_geocoding.py  02_example_import_osm_data_geojson.py  03_example_simple_heat_requirement.py  03b_example_bdew_subtype_comparison.py  04_example_data_heat_requirement.py  05_example_net_generation.py  05b_example_net_generation_osmnx.py  05c_example_osmnx_threading_compatible.py  06_example_simple_pandapipes.py  06b_example_simple_pandapipes_osmnx.py  07_example_complex_pandapipes.py  07_example_timeseries_pandapipes.py  08_example_annuity.py  08_example_complex_pandapipes_timeseries.py  09_example_heat_generators.py  10_example_heat_generation_optimization.py  11_example_lod2.py  12_example_renovation_analysis.py  13_example_individual_supply.py  14_example_photovoltaics.py  15_example_annuity.py  15_interactive_matplotlib.py  16_interactive_matplotlib.py  17_energy_system_seasonal_storage.py  18_chp_pufferspeicher.py  18_stanet_to_pandapipes.py  19_generator_schematic_test_window.py  20_leaflet_test.py  21_example_advanced_plots.py  22_example_elevation_comparison.py  22_example_simple_thermal_storage.py  BHKW_Speicher.py  benchmark_synthetic_net_generation.py  example_interactive_network_plot.py  generate_synthetic_gis_data.py  generator_schematic_test_window.py  renovation_analysis_test.py  simple_heat_generators_test.py  simple_heat_requirement_test.py  simple_lod2_test.py  (+5 more)
feature_develop/: BHKW_Speicher.py  simple_osm_clustering_test.py  spidernet_diagramm_pyqtgraph.py  stanet_import_pandapipes.py
hooks/: hook-fiona.py  hook-geopandas.py  hook-pyproj.py  hook-shapely.py
tests/: conftest.py  simple_heat_generators_test.py  simple_net_generation_test.py  simple_osm_test.py  test_annuity.py  test_area_selection.py  test_artifact_versioning.py  test_building_csv.py  test_comparison_data.py  test_comparison_kpis.py  test_config_naming.py  test_constants.py  test_csv_schemas.py  test_elevation_integration.py  test_energy_system.py  test_energy_system_thread.py  test_examples_smoke.py  test_gui_thread_guard.py  test_heat_generators.py  test_heat_requirement_csv.py  test_net_generation.py  test_net_simulation.py  test_netsim_widgets.py  test_network_connectivity.py  test_network_geojson_schema.py  test_osm_dialogs.py  test_osm_import.py  test_project_centroid.py  test_project_progress.py  test_project_settings.py  test_project_structure.py  test_schema.py  test_schematic_geometry.py  test_serialization.py  test_simulation_golden_master.py  test_tab_reset_views.py  test_technology_dialogs.py
(+433 files in other folders)
