[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "districtheatingsim"
version = "1.0.3"
description = "A simulation tool for district heating systems"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Dipl.-Ing. (FH) Jonas Pfeiffer", email = "jonas.pfeiffer@hszg.de"}]
maintainers = [{name = "Dipl.-Ing. (FH) Jonas Pfeiffer", email = "jonas.pfeiffer@hszg.de"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
    "matplotlib",
    "pandapipes==0.14.0",
    "pyslpheat @ git+https://github.com/JonasPfeiffer123/pyslpheat.git",
    "thermal-energy-storage-1d @ git+https://github.com/JonasPfeiffer123/thermal-energy-storage-1d.git",
    "geopandas",
    "folium",
    "scipy",
    "geopy",
    "overpy",
    "geojson",
    "scikit-learn",
    "requests",
    "CoolProp",
    "contextily",
    "plotly",
    "seaborn",
    "osmnx",
    "networkx",
    "numpy>=2.2,<2.4",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
elevation = [
    "rasterio>=1.3",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-tabs>=3.4.0",
    "myst-parser>=2.0.0",
    "sphinxcontrib-bibtex>=2.4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.gui-scripts]
districtheatingsim = "districtheatingsim.DistrictHeatingSim:main"

[project.urls]
Homepage = "https://github.com/JonasPfeiffer123/DistrictHeatingSim"
Documentation = "https://districtheatingsim.readthedocs.io"
Repository = "https://github.com/JonasPfeiffer123/DistrictHeatingSim"
Issues = "https://github.com/JonasPfeiffer123/DistrictHeatingSim/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"districtheatingsim" = [
    "data/**/*",
    "images/**/*",
    "leaflet/**/*",
    "project_data/**/*",
    "styles/**/*",
    "gui/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: end-to-end tests that build + solve a pandapipes network (numba cold-start ~30s). Run by default; skip locally with `-m 'not slow'`.",
]

[tool.ruff]
target-version = "py311"
line-length = 120
# The whole `src` tree (incl. the GUI) is lint-clean and gated now; only the
# example scripts and Sphinx docs stay out of scope.
extend-exclude = [
    "examples",
    "docs",
]

[tool.ruff.lint]
# Conservative starter rule set: real-bug catchers, not style churn.
#   E/F  = pyflakes + pycodestyle errors (undefined names, unused imports, ...)
#   I    = import sorting
#   B    = flake8-bugbear (likely-bug patterns)
#   UP   = pyupgrade
select = ["E", "F", "I", "B", "UP"]
# E501 (line too long) is handled by the formatter, not the linter.
ignore = ["E501"]
